# BackEnd/server/api/controllers/users/controller.ts
@@ -2,6 +2,7 @@ import { pick } from 'lodash';
 import UserService from '../../services/user.service';
 import { Request, Response } from 'express';
 import { getURL } from '../../../common/myutils';
+import { IO } from '../../socketing/socketing';
 
 export class Controller {
   all(req: Request, res: Response): void {
@@ -14,7 +15,8 @@ export class Controller {
           'id',
           'name',
           'username',
-          'email'
+          'email',
+          'image'
         ])
        ,
         link: getURL(req, `/api/v1/users/${val.id}` )
@@ -28,18 +30,28 @@ export class Controller {
 
   }
 
-  byId(req: Request, res: Response): void {
-    UserService.byId(req.params.id)
-    .then(({id, name, username, email}) => {
-     res.json({id, name, username, email});
-    }).catch(err =>
+  getProfile(req: Request & {theuser: {}}, res: Response): void {
+
+    if(req.theuser) {
+      res.json({
+        ...pick(req.theuser,[
+          '_id',
+          'name',
+          'username',
+          'email',
+          'image'
+        ])
+      });
+    }
+    else {
       res
-        .status(400)
-        .json({error: 'something went wrong'}),
-    );
+      .status(400)
+      .json({error: 'user note found'});
+    }
   }
 
   getToken(req: Request, res: Response): void {
+
     UserService.getToken(req.body.username, req.body.password, req.body.remember )
     .then((r) => {
      res.json(r);
@@ -52,19 +64,22 @@ export class Controller {
 
   create(req: Request, res: Response): void {
 
-    UserService.create(req).then(r =>
-      res
-        .status(200)
-        .location(`/api/v1/users/${r.id}`)
-        .json( {
-          ...pick(r,[
-            'id',
-            'name',
-            'username',
-            'email',
-            'image'
-          ])
-        }),
+    UserService.create(req).then(r => {
+
+      return res
+      .status(200)
+      .location(`/api/v1/users/${r.id}`)
+      .json( {
+        ...pick(r,[
+          '_id',
+          'name',
+          'username',
+          'email',
+          'image'
+        ])
+      });
+    }
+    
     ).catch(err =>
       res
         .status(400)
