# BackEnd/server/api/controllers/users/router.ts
@@ -1,7 +1,9 @@
+import { athenticate } from './../../middleware/auth';
 import * as express from 'express';
 import controller from './controller'
+
 export default express.Router()
     .post('/', controller.create)
     .get('/', controller.all)
-    .get('/:id', controller.byId)
+    .get('/getprofile', athenticate, controller.getProfile)
     .post('/gettoken', controller.getToken);
